[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Scripts/MTile.gd" type="Script" id=1]
[ext_resource path="res://Assets/mahjong-tile.png" type="Texture" id=2]
[ext_resource path="res://Assets/mahjong-tile-gray.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/文道油漆黑.ttf"

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 5
outline_color = Color( 0.0117647, 0.0666667, 0.501961, 1 )
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Shake"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.01, 0.01 ), Vector2( 0.2, 0.2 ) ]
}

[node name="MTile" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="ColorTile" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="NumberLabel" type="Label" parent="."]
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "-1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayTile" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 3 )
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
